starships-app deployment (WIP)

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,7 +8,7 @@ COPY manage.py /code/
 COPY requirements.txt /code/
 COPY start.sh /code/
 RUN pip install -r requirements.txt
-CMD ["./start"]
+CMD ["./start.sh"]
 
 # command to build the image :
 # docker build -t starships-app:1.0 --rm=true --no-cache=true .
