--- a/infra/starships-app-deployment.yaml
+++ b/infra/starships-app-deployment.yaml
@@ -25,7 +25,7 @@ spec:
             - name: POSTGRES_PASSWORD
               value: postgres
             - name: POSTGRES_HOST
-              value: postgres
+              value: postgres-service
             - name: POSTGRES_PORT
               value: "5432"
           ports:
