add proxy config on angular serve

--- a/starships-angular/angular.json
+++ b/starships-angular/angular.json
@@ -69,7 +69,8 @@
               "browserTarget": "starships-angular:build:production"
             },
             "development": {
-              "browserTarget": "starships-angular:build:development"
+              "browserTarget": "starships-angular:build:development",
+              "proxyConfig": "proxy.conf.js"
             }
           },
           "defaultConfiguration": "development"
